Fix z-index of subbanner

--- a/docroot/_diffs/css/custom_responsive.css
+++ b/docroot/_diffs/css/custom_responsive.css
@@ -66,6 +66,7 @@
 			    position: fixed;
 			    right: 0;
 			    top: 0;
+			    z-index: 1060;
 	
 			    > a {
 			    	padding: 7px 10px;
